--- a/.github/workflows/test-aws-package.yaml
+++ b/.github/workflows/test-aws-package.yaml
@@ -15,14 +15,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
-          role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
-          aws-region: us-west-2
-          role-duration-seconds: 21600
-
       - uses: ./.github/actions/create-bb-package
         with:
           username: ${{ secrets.REGISTRY1_USERNAME }}
@@ -31,34 +23,13 @@ jobs:
           download-init-package: true        
           timeout-minutes: 60
 
-      - name: Set eks_cluster_name
-        id: get_cluster_name
-        env:
-          SHA: ${{ github.sha }}
-        run: |
-          echo "eks_cluster_name=big-bang-aws-${SHA:0:7}" >> $GITHUB_OUTPUT
-          echo "short_sha=${SHA:0:7}" >> $GITHUB_OUTPUT
-
-      - name: Package EKSCTL 
-        run: zarf package create --confirm
-        working-directory: .github/workflows/eks
-
-      - name: Create EKS cluster
-        run: |
-          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-
-          zarf package deploy zarf-package-distro-eks-multi.tar.zst \
-            --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --confirm
-        working-directory: .github/workflows/eks #just holds the zarf-config
+      - name: Create k3d cluster
         id: create-cluster
-
-      ## We need to add functionality to allow the user to bring their own KMS Key Alias
-      
-      - name: Show Cluster
-        run: |
-          kubectl get nodes
-          kubectl config get-contexts
+        uses: defenseunicorns/uds-aws-ci-k3d/.github/actions/cluster
+        with:
+          cluster-action: create
+          aws-assume-role: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
+          aws-region: us-west-2
 
       - name: Zarf init
         run: |
@@ -86,9 +57,8 @@ jobs:
         working-directory: aws
         timeout-minutes: 60
 
-      - name: Teardown EKS cluster
+      - name: Teardown k3d cluster
         if: always()
-        # can't do a zarf package remove since there's no kubernetes cluster.
-        run: |
-          ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
-        working-directory: .github/workflows/eks
+        uses: defenseunicorns/uds-aws-ci-k3d/.github/actions/cluster
+        with:
+          cluster-action: destroy
