Update k3d action ref

--- a/.github/workflows/test-aws-package.yaml
+++ b/.github/workflows/test-aws-package.yaml
@@ -15,6 +15,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+        # todo: move this step to execute after building the package
+        # We want to know our package can build successfully before creating a cluster,
+        # but this is swapped for now to get faster feedback on the cluster action.
+      - name: Create k3d cluster
+        id: create-cluster
+        uses: defenseunicorns/uds-aws-ci-k3d@update-script-path
+        with:
+          cluster-action: create
+          aws-assume-role: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
+          aws-region: us-west-2
+
       - uses: ./.github/actions/create-bb-package
         with:
           username: ${{ secrets.REGISTRY1_USERNAME }}
@@ -22,14 +33,6 @@ jobs:
           working-dir: aws
           download-init-package: true
           timeout-minutes: 60
-
-      - name: Create k3d cluster
-        id: create-cluster
-        uses: defenseunicorns/uds-aws-ci-k3d/.github/actions/cluster@v0.0.1
-        with:
-          cluster-action: create
-          aws-assume-role: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
-          aws-region: us-west-2
 
       - name: Zarf init
         run: |
@@ -59,6 +62,6 @@ jobs:
 
       - name: Teardown k3d cluster
         if: always()
-        uses: defenseunicorns/uds-aws-ci-k3d/.github/actions/cluster@v0.0.1
+        uses: defenseunicorns/uds-aws-ci-k3d@update-script-path
         with:
           cluster-action: destroy
