--- a/.github/workflows/test-aws-upgrade.yaml
+++ b/.github/workflows/test-aws-upgrade.yaml
@@ -23,14 +23,9 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           package-name: packages/dubbd-aws
 
-      - uses: ./.github/actions/create-bb-package
-        with:
-          username: ${{ secrets.REGISTRY1_USERNAME }}
-          password: ${{ secrets.REGISTRY1_PASSWORD }}
-          working-dir: aws
-          download-init-package: true
-          timeout-minutes: 60
-
+        # todo: move this step to execute after building the package
+        # We want to know our package can build successfully before creating a cluster,
+        # but this is swapped for now to get faster feedback on the cluster action.
       - name: Create k3d cluster
         id: create-cluster
         uses: defenseunicorns/uds-aws-ci-k3d@update-script-path
@@ -38,6 +33,14 @@ jobs:
           cluster-action: create
           aws-assume-role: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
           aws-region: us-west-2
+
+      - uses: ./.github/actions/create-bb-package
+        with:
+          username: ${{ secrets.REGISTRY1_USERNAME }}
+          password: ${{ secrets.REGISTRY1_PASSWORD }}
+          working-dir: aws
+          download-init-package: true
+          timeout-minutes: 60
       
       - name: Zarf init
         run: |
@@ -82,6 +85,6 @@ jobs:
 
       - name: Teardown k3d cluster
         if: always()
-        uses: defenseunicorns/uds-aws-ci-k3d/.github/actions/cluster@v0.0.1
+        uses: defenseunicorns/uds-aws-ci-k3d@update-script-path
         with:
           cluster-action: destroy
