--- a/.github/workflows/test-k3d-package.yaml
+++ b/.github/workflows/test-k3d-package.yaml
@@ -38,16 +38,7 @@ jobs:
       - name: Deploy DUBBD on k3d cluster
         env:
           SHA: ${{ github.sha }}
-        run: |
-          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-
-          zarf package deploy zarf-package-*.tar.zst \
-            --set loki_force_destroy=true \
-            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --set state_bucket_name="uds-ci-state-bucket" \
-            --set state_key="tfstate/ci/install/${SHA:0:7}-state-bucket.tfstate" \
-            --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
-            --confirm
+        run: zarf package deploy zarf-package-*.tar.zst --confirm
         working-directory: k3d
         timeout-minutes: 60
 
