feat: 119 document local dev env setup and uds iac quick start as an onboarding resource (#279)
* initial merge of uds dev env coda page into uds-package-dubbd/k3d readme.

* initial embed of zarf-package-k3d into k3d flavor of dubbd. Intention is to provide simple IaC for k3d infrastructure to simplify setup instructions. Updated README.

* major push forward in refactoring k3d-local sub-package into dubbd zarf package. Still untested, currently grappling with create-time parameter expansion.

* refactored variables, constants, and templates per new understanding from feedback in slack threads today. k3d-local sub-package finally builds.

* refactor init component based on feedback from razzle, update zarf
version and docs.

* fixed k3d cluster creation and fetching/deploying init pkg. Package
remove successfully deletes the cluster, but zarf barfs at the very end
- something about not being able to access a secret.

* Renamed dir containing zarf sub-package to match (k3-local), removed vestigial image subfolder, and integrated README PR feedback

* updated k3d README, moved arch spec into zarf-config to simplify cmd.

* Documented that installing kubectl is optional and why, and .gitignore
log files

* Don't disable `neuvector.monitor.install` per PR feedback.

* Removed zerf-version-consciousness from k3d-local package. Removed vestigial Makefile. Consolidated CR AuthN docs.

* fix placement and reference to the new "versionless" zarf init pkg
during k3d-local pkg build.

* fix init pkg path during k3d-local build

* get zarf version from currently running zarf process. This is required
to handle downloaded init pkgs effectively.

* tidying up the handling of zarf init pkg downloads and print an
informative message at the end.

* clarify/improve docs based on PR feedback from mjnagel.

* Added note on arch support, with reference to package creation
limitation due to zarf tools download-init bug.

* fix redundancy in arch

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 **/*.tfstate
 **/*.tfstate.backup
 *.tar.gz
-*.tar.zst
+**/*.tar.zst
 ~/
 .DS_Store
 defense-unicorns-distro/preflight.sh
@@ -9,3 +9,5 @@ defense-unicorns-distro/preflight.sh
 tmp
 zarf-sbom
 .idea
+**/checksums.txt
+**/*.log
