--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -2,7 +2,7 @@
 kind: ZarfPackageConfig
 metadata:
   name: dubbd-k3d
-  description: "Defense Unicorns Big Bang Distro"
+  description: "Defense Unicorns Big Bang Distro K3D Environment"
   # x-release-please-start-version
   version: "0.3.0"
   # x-release-please-end
