--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -158,7 +158,7 @@ components:
       onDeploy:
         before:
           - cmd: |
-              if [ "$(./zarf tools kubectl get svc -n istio-system tenant-ingressgateway -o jsonpath='{.metadata.annotations.service\.beta\.kubernetes\.io/aws-load-balancer-internal}' 2>/dev/null)" == "${ZARF_VAR_PRIVATE_TENANT_LB}" ]; then
+              if [ "$(./zarf tools kubectl get svc -n istio-system tenant-ingressgateway -o jsonpath='{.metadata.annotations.service\.beta\.kubernetes\.io/aws-load-balancer-internal}' 2>/dev/null)" = "${ZARF_VAR_PRIVATE_TENANT_LB}" ]; then
                 echo false
               else
                 echo true
@@ -173,8 +173,8 @@ components:
       onDeploy:
         after:
           - cmd: |
-              if [ "${ZARF_VAR_IS_UPGRADE}" == "true" ]; then
-                if [ "${ZARF_VAR_TENANT_INGRESS_UPDATE}" == "true" ]; then
+              if [ "${ZARF_VAR_IS_UPGRADE}" = "true" ]; then
+                if [ "${ZARF_VAR_TENANT_INGRESS_UPDATE}" = "true" ]; then
                   ./zarf tools kubectl delete svc -n istio-system tenant-ingressgateway
                   echo "Tenant ingress gateway conifugration was updated. You may need to update DNS records to point to the newly provisioned loadbalancer."
                   echo "The new hostname can be pulled with: zarf tools kubectl get svc -n istio-system tenant-ingressgateway -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'"
