--- a/aws/zarf-config.yaml
+++ b/aws/zarf-config.yaml
@@ -30,11 +30,13 @@ package:
       #loki_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
       # -- If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket
       loki_force_destroy: "true"
+
+      create_vpc: "false"
+
+      ### EKS ###
       create_cluster: "true"
       cluster_endpoint_public_access: "true"
-      create_vpc: "false"
       vpc_cidr: "192.168.0.0/16"
       vpc_id: "vpc-03b6e55af0613dda2"
       private_subnets: "subnet-01158ab94073f7f23,subnet-02ccea6028a7b16de,subnet-0566d42b760fdd20c"
       public_subnets: "subnet-05718ff8c5ca375e4,subnet-01fbd45595d1ccdaf,subnet-0dcd7cf4b147d7134"
-      private_subnets_cidr_blocks: "192.168.160.0/19,192.168.96.0/19,192.168.128.0/19"
