--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -32,9 +32,6 @@ variables:
   description: "Provide a means to force destroy the Loki storage (S3) bucket even if it contains data"
   default: "false"
 
-- name: CREATE_CLUSTER
-  description: "Create an EKS cluster with this package."
-  default: "true"
 - name: CREATE_VPC
   description: "Create a VPC with this package."
   default: "true"
@@ -68,6 +65,18 @@ components:
         target: tmp/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_linux_amd64.zip
       - source: https://releases.hashicorp.com/terraform-provider-aws/###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_windows_amd64.zip
         target: tmp/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_windows_amd64.zip
+  - name: prepare-eks-module
+    required: true
+    import:
+      path: eks
+  - name: execute-eks-module
+    required: true
+    import:
+      path: eks
+  - name: output-eks-module
+    required: true
+    import:
+      path: eks
   - name: loki-module
     required: true
     actions:
@@ -96,7 +105,7 @@ components:
           - cmd: |
               terraform init -force-copy \
               -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
-              -backend-config="key=${ZARF_VAR_STATE_KEY}" \
+              -backend-config="key=loki-${ZARF_VAR_STATE_KEY}" \
               -backend-config="region=${ZARF_VAR_REGION}" \
               -backend-config="dynamodb_table=${ZARF_VAR_STATE_DYNAMODB_TABLE_NAME}"
             dir: run/loki
