--- a/.github/workflows/test-aws-package.yaml
+++ b/.github/workflows/test-aws-package.yaml
@@ -13,7 +13,8 @@ jobs:
   
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        # renovate: datasource=github-tags depName=actions/checkout versioning=semver
+        uses: actions/checkout@v3.5.3
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
