--- a/.github/workflows/test-k3d-package.yaml
+++ b/.github/workflows/test-k3d-package.yaml
@@ -13,7 +13,8 @@ jobs:
   
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        # renovate: datasource=github-tags depName=actions/checkout versioning=semver
+        uses: actions/checkout@v3.5.3
 
       - uses: ./.github/actions/create-bb-package
         with:
@@ -25,6 +26,7 @@ jobs:
 
       - name: Create k3d cluster
         id: create-cluster
+        # renovate: datasource=github-tags depName=defenseunicorns/uds-aws-ci-k3d versioning=semver
         uses: defenseunicorns/uds-aws-ci-k3d@v0.0.2
         with:
           cluster-action: create
@@ -47,6 +49,7 @@ jobs:
 
       - name: Teardown k3d cluster
         if: always()
+        # renovate: datasource=github-tags depName=defenseunicorns/uds-aws-ci-k3d versioning=semver
         uses: defenseunicorns/uds-aws-ci-k3d@v0.0.2
         with:
           cluster-action: destroy
