--- a/aws/zarf-config.yaml
+++ b/aws/zarf-config.yaml
@@ -26,6 +26,8 @@ package:
       state_dynamodb_table_name: uds-dev-state-dynamodb
       # -- AWS region
       region: us-west-2
+      # -- Provision a private/internal load balancer for the admin ingress gateway, if false a public load balancer will be provisioned
+      private_admin_lb: true
       # -- Provision a private/internal load balancer for the tenant ingress gateway, if false a public load balancer will be provisioned
       private_tenant_lb: true
       # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-loki-"
