feat: enable auto_scan for neuvector by default

--- a/values/neuvector.yaml
+++ b/values/neuvector.yaml
@@ -7,3 +7,10 @@ neuvector:
       enabled: true
     monitor:
       install: true
+    controller:
+      secret:
+        data:
+          sysinitcfg.yaml:
+            always_reload: true
+            scan_config:
+              auto_scan: true
