Adding terratest for eks integration.

--- a/aws/zarf-config.yaml
+++ b/aws/zarf-config.yaml
@@ -40,3 +40,4 @@ package:
       vpc_id: "vpc-03b6e55af0613dda2"
       private_subnets: "subnet-01158ab94073f7f23,subnet-02ccea6028a7b16de,subnet-0566d42b760fdd20c"
       public_subnets: "subnet-05718ff8c5ca375e4,subnet-01fbd45595d1ccdaf,subnet-0dcd7cf4b147d7134"
+      private_subnets_cidr_blocks: "192.168.160.0/19,192.168.96.0/19,192.168.128.0/19"
