--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -4,13 +4,15 @@ on:
   pull_request:
     branches:
       - main
-    paths:
-      - ".github/workflows/ci-on-pull-request-k3d.y*ml"
-      - "defense-unicorns-distro/**"
-      - "values/**"
-      - "k3d/values/**"
-      - "k3d/zarf-config.y*ml"
-      - "k3d/zarf.y*ml"
+    paths-ignore:
+      - ".gitignore"
+      - "LICENSE"
+      - "**.md"
+      - "**.json"
+      - "aws/**"
+      - ".github/workflows/ci-on-pull-request-aws.y*ml"
+      - ".github/workflows/test-aws-package.y*ml"
+      - ".github/workflows/test-aws-upgrade.y*ml"
 
 jobs:
   test-release:
