fix: Update workflow path filters (#320)
* Update workflow path filters

* Update path filters to use paths-ignore

--- a/.github/workflows/ci-on-pull-request-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-aws.yaml
@@ -5,7 +5,13 @@ on:
     branches:
       - main
     paths-ignore:
-      - '**/README.md'
+      - ".gitignore"
+      - "LICENSE"
+      - "**.md"
+      - "**.json"
+      - "k3d/**"
+      - ".github/workflows/ci-on-pull-request-k3d.y*ml"
+      - ".github/workflows/test-k3d-package.y*ml"
   workflow_call:
 
 jobs:
