--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -28,6 +28,9 @@ variables:
 - name: REGION
   description: "The AWS region to run the Terraform in"
 
+- name: PRIVATE_ADMIN_LB
+  description: "Provision a private/internal load balancer for the admin ingress gateway"
+  default: "true"
 - name: PRIVATE_TENANT_LB
   description: "Provision a private/internal load balancer for the tenant ingress gateway"
   default: "true"
@@ -158,6 +161,16 @@ components:
       onDeploy:
         before:
           - cmd: |
+              if [ "$(./zarf tools kubectl get svc -n istio-system admin-ingressgateway -o jsonpath='{.metadata.annotations.service\.beta\.kubernetes\.io/aws-load-balancer-internal}' 2>/dev/null)" = "${ZARF_VAR_PRIVATE_ADMIN_LB}" ]; then
+                echo false
+              else
+                echo true
+              fi
+            description: "Check if admin ingressgateway needs an update"
+            mute: true
+            setVariables:
+              - name: ADMIN_INGRESS_UPDATE
+          - cmd: |
               if [ "$(./zarf tools kubectl get svc -n istio-system tenant-ingressgateway -o jsonpath='{.metadata.annotations.service\.beta\.kubernetes\.io/aws-load-balancer-internal}' 2>/dev/null)" = "${ZARF_VAR_PRIVATE_TENANT_LB}" ]; then
                 echo false
               else
@@ -174,6 +187,11 @@ components:
         after:
           - cmd: |
               if [ "${ZARF_VAR_IS_UPGRADE}" = "true" ]; then
+                if [ "${ZARF_VAR_ADMIN_INGRESS_UPDATE}" = "true" ]; then
+                  ./zarf tools kubectl delete svc -n istio-system admin-ingressgateway
+                  echo "Admin ingress gateway configuration was updated. You may need to update DNS records to point to the newly provisioned loadbalancer."
+                  echo "The new hostname can be pulled with: zarf tools kubectl get svc -n istio-system admin-ingressgateway -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'"
+                fi
                 if [ "${ZARF_VAR_TENANT_INGRESS_UPDATE}" = "true" ]; then
                   ./zarf tools kubectl delete svc -n istio-system tenant-ingressgateway
                   echo "Tenant ingress gateway configuration was updated. You may need to update DNS records to point to the newly provisioned loadbalancer."
