--- a/.github/workflows/ci-on-pull-request-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-aws.yaml
@@ -5,11 +5,12 @@ on:
     branches:
       - main
     paths-ignore:
-      - 'docs/**'
       - ".gitignore"
       - "LICENSE"
       - "**.md"
       - "**.json"
+      - "**.png"
+      - "**.svg"
       - "k3d/**"
       - ".github/workflows/ci-on-pull-request-k3d.y*ml"
       - ".github/workflows/test-k3d-package.y*ml"
