--- a/.github/workflows/test-uds-core-aws-upgrade.yaml
+++ b/.github/workflows/test-uds-core-aws-upgrade.yaml
@@ -1,4 +1,4 @@
-name: Test DUBBD AWS Package
+name: Test UDS Core AWS Upgrade
 
 on:
   workflow_call:
@@ -8,12 +8,20 @@ permissions:
   contents: read
 
 jobs:
-  test-clean-install:
+  test-upgrade:
     runs-on: ubuntu-latest
   
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      # Run this step first so we can fail fast in case an invalid package name is provided
+      - name: Get latest package version to upgrade from
+        id: latest-package-version
+        uses: ./.github/actions/latest-package-version
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          package-name: packages/uds-core-aws
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -23,20 +31,21 @@ jobs:
           aws-region: us-west-2
           role-duration-seconds: 21600
 
-      - uses: ./.github/actions/create-bb-package
+      - uses: ./.github/actions/create-zarf-package
+        name: Create Zarf package
         with:
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
-          working-dir: aws
+          working-dir: aws/uds-core-aws
           download-init-package: true        
           timeout-minutes: 60
-
+          
       - name: Set eks_cluster_name
         id: get_cluster_name
         env:
           SHA: ${{ github.sha }}
         run: |
-          echo "eks_cluster_name=big-bang-aws-${SHA:0:7}" >> $GITHUB_OUTPUT
+          echo "eks_cluster_name=uds-core-aws-upgrade-${SHA:0:7}" >> $GITHUB_OUTPUT
           echo "short_sha=${SHA:0:7}" >> $GITHUB_OUTPUT
 
       - name: Package EKSCTL 
@@ -53,8 +62,6 @@ jobs:
         working-directory: .github/workflows/eks #just holds the zarf-config
         id: create-cluster
 
-      ## We need to add functionality to allow the user to bring their own KMS Key Alias
-      
       - name: Show Cluster
         run: |
           kubectl get nodes
@@ -64,27 +71,42 @@ jobs:
         run: |
           zarf init -a amd64 --components=git-server --confirm
 
-      - name: Deploy DUBBD-AWS
+      - name: Deploy latest package version
+        env:
+          SHA: ${{ github.sha }}
+        run: |
+          zarf package deploy \
+            oci://ghcr.io/defenseunicorns/packages/uds-core-aws:${{ steps.latest-package-version.outputs.latest-package-version }} \
+            --set loki_force_destroy=true \
+            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+            --set state_bucket_name="uds-ci-state-bucket" \
+            --set state_key="tfstate/ci/upgrade/${SHA:0:7}-uds-core-aws.tfstate" \
+            --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
+            --confirm
+        working-directory: aws/uds-core-aws
+        timeout-minutes: 60
+
+      - name: Deploy UDS Core AWS
         env:
           SHA: ${{ github.sha }}
         run: |
           echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-
           zarf package deploy zarf-package-*.tar.zst \
             --set loki_force_destroy=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
             --set state_bucket_name="uds-ci-state-bucket" \
-            --set state_key="tfstate/ci/install/${SHA:0:7}-state-bucket.tfstate" \
+            --set state_key="tfstate/ci/upgrade/${SHA:0:7}-uds-core-aws.tfstate" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
-        working-directory: aws
+        working-directory: aws/uds-core-aws
         timeout-minutes: 60
 
-      - name: Remove DUBBD-AWS
+      - name: Remove UDS Core AWS
         if: always()
         run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: aws
+        working-directory: aws/uds-core-aws
         timeout-minutes: 60
+        continue-on-error: true
 
       - name: Teardown EKS cluster
         if: always()
@@ -92,3 +114,5 @@ jobs:
         run: |
           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
         working-directory: .github/workflows/eks
+        timeout-minutes: 60
+        continue-on-error: true
