--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -10,9 +10,7 @@ on:
       - "**.md"
       - "**.json"
       - "aws/**"
-      - ".github/workflows/ci-on-pull-request-aws.y*ml"
-      - ".github/workflows/test-aws-package.y*ml"
-      - ".github/workflows/test-aws-upgrade.y*ml"
+      - ".github/workflows/**aws**.y*ml"
 
 jobs:
   test-release:
