--- a/.github/workflows/test-dubbd-aws-upgrade.yaml
+++ b/.github/workflows/test-dubbd-aws-upgrade.yaml
@@ -31,11 +31,12 @@ jobs:
           aws-region: us-west-2
           role-duration-seconds: 21600
 
-      - uses: ./.github/actions/create-bb-package
+      - uses: ./.github/actions/create-zarf-package
+        name: Create Zarf package
         with:
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
-          working-dir: aws
+          working-dir: aws/dubbd-aws
           download-init-package: true        
           timeout-minutes: 60
           
@@ -44,7 +45,7 @@ jobs:
         env:
           SHA: ${{ github.sha }}
         run: |
-          echo "eks_cluster_name=big-bang-aws-upgrade-${SHA:0:7}" >> $GITHUB_OUTPUT
+          echo "eks_cluster_name=dubbd-aws-upgrade-${SHA:0:7}" >> $GITHUB_OUTPUT
           echo "short_sha=${SHA:0:7}" >> $GITHUB_OUTPUT
 
       - name: Package EKSCTL 
@@ -79,10 +80,10 @@ jobs:
             --set loki_force_destroy=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
             --set state_bucket_name="uds-ci-state-bucket" \
-            --set state_key="tfstate/ci/upgrade/${SHA:0:7}-state-bucket.tfstate" \
+            --set state_key="tfstate/ci/upgrade/${SHA:0:7}-dubbd-aws" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
-        working-directory: aws
+        working-directory: aws/dubbd-aws
         timeout-minutes: 60
 
       - name: Deploy DUBBD-AWS
@@ -94,16 +95,16 @@ jobs:
             --set loki_force_destroy=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
             --set state_bucket_name="uds-ci-state-bucket" \
-            --set state_key="tfstate/ci/upgrade/${SHA:0:7}-state-bucket.tfstate" \
+            --set state_key="tfstate/ci/upgrade/${SHA:0:7}-dubbd-aws" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
-        working-directory: aws
+        working-directory: aws/dubbd-aws
         timeout-minutes: 60
 
       - name: Remove DUBBD-AWS
         if: always()
         run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: aws
+        working-directory: aws/dubbd-aws
         timeout-minutes: 60
         continue-on-error: true
 
