--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -50,7 +50,7 @@ components:
           - cmd: "./extract-terraform.sh ###ZARF_PKG_TMPL_TERRAFORM_VERSION### ###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###"
           # - cmd: rm -rf tmp
     files:
-      - source: extract.sh
+      - source: ../extract.sh
         target: extract-terraform.sh
         executable: true
       # terraform binary into zarf package
@@ -74,17 +74,17 @@ components:
       onCreate:
         before:
           - cmd: terraform get -update
-            dir: loki
+            dir: ../loki
     files:
-    - source: loki/.terraform
+    - source: ../loki/.terraform
       target: run/loki/.terraform
-    - source: loki/main.tf
+    - source: ../loki/main.tf
       target: run/loki/main.tf
-    - source: loki/variables.tf
+    - source: ../loki/variables.tf
       target: run/loki/variables.tf
-    - source: loki/output.tf
+    - source: ../loki/output.tf
       target: run/loki/output.tf
-    - source: loki/terraform.tfvars
+    - source: ../loki/terraform.tfvars
       target: run/loki/terraform.tfvars
   - name: execute-terraform
     required: true
@@ -138,25 +138,25 @@ components:
   - name: load-certs
     required: true
     import:
-      path: ../defense-unicorns-distro
+      path: ../../defense-unicorns-distro
   - name: preflight
     required: true
     import:
-      path: ../defense-unicorns-distro
+      path: ../../defense-unicorns-distro
   - name: download-flux
     required: true
     import:
-      path: ../defense-unicorns-distro
+      path: ../../defense-unicorns-distro
   - name: bigbang
     required: true
     import:
-      path: ../defense-unicorns-distro
+      path: ../../defense-unicorns-distro
     extensions:
       bigbang:
         version: "###ZARF_PKG_TMPL_BIGBANG_VERSION###"
         valuesFiles:
-        - values/aws-istio.yaml
-        - values/aws-loki.yaml
+        - ../values/aws-istio.yaml
+        - ../values/aws-loki.yaml
     actions:
       onDeploy:
         before:
