--- a/aws/uds-core-aws/zarf.yaml
+++ b/aws/uds-core-aws/zarf.yaml
@@ -68,6 +68,51 @@ components:
         target: tmp/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_linux_amd64.zip
       - source: https://releases.hashicorp.com/terraform-provider-aws/###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_windows_amd64.zip
         target: tmp/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_windows_amd64.zip
+  - name: prepare-cloudtrail-module
+    required: true
+    actions:
+      onCreate:
+        before:
+          - cmd: terraform get -update
+    files:
+    - source: .terraform
+      target: run/cloudtrail/.terraform
+    - source: main.tf
+      target: run/cloudtrail/main.tf
+    - source: variables.tf
+      target: run/cloudtrail/variables.tf
+    - source: output.tf
+      target: run/cloudtrail/output.tf
+    - source: terraform.tfvars
+      target: run/cloudtrail/terraform.tfvars
+  - name: cloudtrail
+    required: false
+    actions:
+      onDeploy:
+        before:
+          - cmd: "test -d ./cloudtrail/ && chmod -R ugo+rwx ./cloudtrail/ || echo $?"
+            dir: run
+          - cmd: |
+              terraform init -force-copy \
+              -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
+              -backend-config="key=cloudtrail-${ZARF_VAR_STATE_KEY}" \
+              -backend-config="region=${ZARF_VAR_REGION}" \
+              -backend-config="dynamodb_table=${ZARF_VAR_STATE_DYNAMODB_TABLE_NAME}"
+            dir: run/cloudtrail
+          - cmd: "terraform plan -var-file=terraform.tfvars"
+            dir: run/cloudtrail
+          - cmd: sleep 15 #time to review
+          - cmd: "terraform apply -auto-approve -var-file=terraform.tfvars"
+            dir: run/cloudtrail
+      onRemove:
+        before:
+          - cmd: |
+              if [ -d "run/cloudtrail" ]; then
+                cd run/cloudtrail
+                terraform destroy -auto-approve
+              else
+                echo "Cannot remove: run/cloudtrail directory does not exist"
+              fi
   - name: loki-module
     required: true
     actions:
