chore: imports for cloudtrail -> uds core

--- a/aws/cloudtrail/zarf-config.yaml
+++ b/aws/cloudtrail/zarf-config.yaml
@@ -5,7 +5,8 @@ package:
       terraform_version: "1.4.2"
       terraform_provider_aws_version: 4.59.0
   deploy:
-    components: 'cloudtrail'
+    # -- Enable optional cloudtrail component
+    components: "cloudtrail"
     set:
       # -- Name of existing Terraform state bucket
       state_bucket_name: uds-dev-state-bucket
