--- a/aws/uds-core-aws/zarf-config.yaml
+++ b/aws/uds-core-aws/zarf-config.yaml
@@ -9,6 +9,8 @@ package:
       terraform_version: "1.4.2"
       terraform_provider_aws_version: 4.59.0
   deploy:
+    # -- Enable optional cloudtrail component
+    components: "cloudtrail"
     set:
       # -- Domain name for the EKS cluster
       domain: bigbang.dev
