--- a/.github/workflows/test-uds-core-aws-upgrade.yaml
+++ b/.github/workflows/test-uds-core-aws-upgrade.yaml
@@ -92,6 +92,7 @@ jobs:
         run: |
           echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
           zarf package deploy zarf-package-*.tar.zst \
+            --components="" \
             --set loki_force_destroy=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
             --set state_bucket_name="uds-ci-state-bucket" \
