docs: add uds core diagram (#317)

--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -9,6 +9,8 @@ on:
       - "LICENSE"
       - "**.md"
       - "**.json"
+      - "**.png"
+      - "**.svg"
       - "aws/**"
       - ".github/workflows/**aws**.y*ml"
 
