ci: test manual workflow

--- a/.github/workflows/cleanup-eks.yaml
+++ b/.github/workflows/cleanup-eks.yaml
@@ -1,11 +1,16 @@
 name: Cleanup EKS
 
 on:
-  workflow_dispatch:
-    inputs:
-     eks_cluster_name:
-       required: true
-       type: string
+  push:
+#  workflow_dispatch:
+#    inputs:
+#     eks_cluster_name:
+#       required: true
+#       type: string
+
+env:
+  eks_cluster_name: uds-core-aws-1beb169
+
 
 permissions:
   id-token: write
